fixed starter